# desmume-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build-test-publish.yml  build.yml  clippy.yml  docs.yml  publish_desmume_rs.yml  publish_desmume_sys.yml
desmume_sys/: Cargo.toml  README.md  build.rs
desmume_sys/src/: lib.rs  metal_resources.rs
src/: err.rs  ffi.rs  input.rs  lib.rs  macros.rs  movie.rs  savestate.rs  sdl_window.rs
src/mem/: index.rs  mod.rs  read.rs
tests/: mem_test.rs  run_test.rs  touchtest.nds
