[package]
name = "desmume-rs"
version = "0.1.3"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/SkyTemple/desmume-rs"
license = "GPL-3.0-or-later"
description = "Rust bindings for DeSmuME, the Nintendo DS emulator."

[workspace]
members = [".", "desmume_sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
desmume-sys = { path = "./desmume_sys", version = "0.1.2" }
thiserror = "2"
