[package]
name = "desmume-sys"
version = "0.1.4"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/surno/desmume-rs"
license = "GPL-3.0-or-later"
description = "FFI for DeSmuME, the Nintendo DS emulator."
links = "desmume"
# Please make sure to keep this list up-to-date with the build.yml GitHub Action.
exclude = [
    "desmume/desmume/src/frontend/cocoa",
    "desmume/desmume/src/frontend/windows/File_Extractor",
    "desmume/desmume/src/frontend/windows/directx",
]

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
glob = "0.3"
tempfile = "3"
pkg-config = "0.3"
